--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -778,6 +778,10 @@ select {
   z-index: 30;
 }
 
+.col-span-12 {
+  grid-column: span 12 / span 12;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -1367,6 +1371,10 @@ select {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-left {
